--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vueuse/core": "^13.1.0",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.8.4",
+    "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
